Another big refactor. Stuff might be borked, idk