@@ -1,22 +1,23 @@
 package me.faun.givepet;
 
 import dev.triumphteam.cmd.bukkit.BukkitCommandManager;
-import dev.triumphteam.cmd.core.suggestion.SuggestionContext;
+import dev.triumphteam.cmd.bukkit.message.BukkitMessageKey;
+import dev.triumphteam.cmd.core.message.MessageKey;
 import dev.triumphteam.cmd.core.suggestion.SuggestionKey;
-import dev.triumphteam.cmd.core.suggestion.SuggestionResolver;
 import mc.obliviate.bloksqliteapi.sqlutils.SQLTable;
 import me.faun.givepet.commands.GivePetCommand;
 import me.faun.givepet.configs.ConfigManager;
+import me.faun.givepet.configs.Messages;
 import me.faun.givepet.listeners.PlayerInteractListener;
+import me.faun.givepet.request.Request;
 import me.faun.givepet.sql.SQLManager;
+import me.faun.givepet.utils.StringUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public final class GivePet extends JavaPlugin {
 
@@ -37,10 +38,13 @@ public final class GivePet extends JavaPlugin {
         logsTable = sqlManager.createLogsTable();
         sqlManager.clearTable(requestsTable);
 
-        BukkitCommandManager<CommandSender> commandManager = BukkitCommandManager.create(this);
-        commandManager.registerSuggestion(SuggestionKey.of("players"), (sender, context) -> Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList()));
-        commandManager.registerSuggestion(SuggestionKey.of("help"), (sender, context) -> List.of("accept", "help", "reject", "reload"));
-        commandManager.registerCommand(new GivePetCommand());
+        BukkitCommandManager<CommandSender> bukkitCommandManager = BukkitCommandManager.create(this);
+        bukkitCommandManager.registerSuggestion(SuggestionKey.of("#players"), (sender, context) -> Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
+        bukkitCommandManager.registerSuggestion(SuggestionKey.of("#help"), (sender, context) -> List.of("accept", "help", "reject", "reload"));
+        bukkitCommandManager.registerMessage(MessageKey.UNKNOWN_COMMAND, ((sender, context) -> StringUtils.sendComponent(sender, Messages.UNKNOWN_COMMAND)));
+        bukkitCommandManager.registerMessage(BukkitMessageKey.NO_PERMISSION, ((sender, context) -> StringUtils.sendComponent(sender, Messages.NO_PERMISSION)));
+        bukkitCommandManager.registerMessage(BukkitMessageKey.NO_PERMISSION, ((sender, context) -> StringUtils.sendComponent(sender, Messages.NO_PERMISSION)));
+        bukkitCommandManager.registerCommand(new GivePetCommand());
 
         Bukkit.getPluginManager().registerEvents(new PlayerInteractListener(),this);
     }
